# interactive-graphics

./: .gitignore  .ycm_extra_conf.py  CMakeLists.txt
A0_Code/: CMakeLists.txt  helloWorld432.cpp  vshader00_v150.glsl
A1/: README  a1.vert  a1_colorpassthrough.vert  main.cpp
A2/: a2eventhandler.hpp  main.cpp
A2/shaders/: a2_multi.frag  a2_multi.vert  a2_single.frag  a2_single.vert
A3/: main.cpp
A3/shaders/: 3d_model.frag  3d_model.vert  3d_wireframe.frag  3d_wireframe.vert
A4/: build.sh  main.cpp
A4/shaders/: 3d_model.frag
A5/: main.cpp
A5/shaders/: phong_sun_spot_frag.frag  phong_sun_spot_frag.vert  phong_sun_spot_vert.frag  phong_sun_spot_vert.vert
A6/: README  main.cpp  phong_sun_spot_frag_tex.frag
A6/shaders/: phong_sun_spot_frag.vert  phong_sun_spot_frag_tex.frag  phong_sun_spot_frag_tex.vert
A6/textures/: rollsafe.ppm
DGFX/: 2d.cpp  2d.h  CMakeLists.txt  camera.cpp  camera.hpp  cube.cpp  cube.hpp  dice_roller_scene.cpp  dice_roller_scene.hpp  drawable.h  entity.cpp  entity.h  entity.hpp  eventhandler.hpp  geometry.cpp  geometry.hpp  light.cpp  light.hpp  object.cpp  object.hpp  plane.cpp  plane.hpp  scene.cpp  scene.h  scene.hpp
DaveUtils/: CMakeLists.txt  daveutils.cpp  daveutils.h  daveutils.hpp
FinalProject/: README  main.cpp
FinalProject/shaders/: 3d_wireframe.vert
InitShader/: CMakeLists.txt
